# Indigo

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml  linux-build.yml  linux_build.yml  release.yml  windows-build.yml  windows_build.yml
assets/: imgui.ini
assets/models/: high-poly-suzanne.glb  wall.mtl
assets/models/little_city/: interior.glb  main.glb  misc.glb  outline.glb
assets/models/sponza/: Sponza.gltf
assets/shaders/: base.frag  base.vert  base_pass.frag  base_pass.vert  compositor.frag  deferredLight.frag  deferredPass.frag  deferred_light.frag  deferred_pass.frag  frameScreen.frag  frameScreen.vert  frame_deferred.vert  frame_screen.frag  frame_screen.vert  frame_shadow.frag  frame_shadow.vert  lens_flare.frag  lens_flare_and_volume.frag  lighting.frag  phong.frag  phong.geom  phong.vert  pipeline_light.frag  shadow.frag  shadow.geom  shadow.vert  shadow_direction.frag  shadow_point.frag  shadow_point.geom  shadow_point.vert  ssao.frag
assets/textures/: vestibule_2k.exr  vestibule_2k.hdr
include/: camera.hpp  controller.hpp  exception.hpp  frame_buffer.hpp  id_generator.hpp  importer.hpp  index_buffer.hpp  light.hpp  log.hpp  model.hpp  pch.hpp  pipeline.hpp  program.hpp  renderer.hpp  scene.hpp  scene_object.hpp  texture.hpp  transform.hpp  uniform_buffer.hpp  vertex_array.hpp  vertex_buffer.hpp  window.hpp
include/gui/: context.hpp  light_slider.hpp  transform_slider.hpp
lib/: CMakeLists.txt
lib/glew/lib/: libGLEW.so.2.2.0
src/: camera.cpp  controller.cpp  exception.cpp  frame_buffer.cpp  importer.cpp  index_buffer.cpp  light.cpp  log.cpp  main.cpp  model.cpp  pipeline.cpp  program.cpp  renderer.cpp  scene.cpp  scene_object.cpp  texture.cpp  transform.cpp  uniform_buffer.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
